[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "quart-todo-list"
version = "0.1.0"
description = "A simple todo list plugin using Quart"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://example.com"
repository = "https://github.com/username/quart-todo-list"

[project.scripts]
start = "python main.py"

[project.dependencies]
quart = "^0.15.1"
quart-cors = "^0.3.0"

[project.optional-dependencies]

[tool.poetry.dev-dependencies]
